# facebook-reels-api

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: reels_to_upload.csv
examples/: check_video_properties.py  get_reels.py  upload_reel_to_fanpage.py  upload_reel_to_multiple_fanpage.py  upload_reel_to_one_fanpage.py  upload_reels_csv.py
facebook_uploader/: exceptions.py  reel.py  uploader.py
src/facebook_uploader/: uploader.py
tests/: uploader.py
